<resources>
    <string name="app_name">FalconFinder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planet_image">planet image</string>
    <string name="select_vehicle_for_planet"></string>
    <string name="congratulations">Success! Congratulations on finding Falcone. King Shan is mighty pleased.</string>
    <string name="game_rule">Game Rule</string>
    <string name="found_on">Found On: {planet}</string>
    <string name="start_again">Start Again</string>
    <string name="time_taken_time">Time Taken: {time}Hrs</string>
    <string name="falcon_not_found">Oops! Falcon was not present on chosen planet. Lets try again. </string>
    <string name="planet_name">Planet: {planet}</string>
    <string name="select_vehicle_for">Select vehicle for {planet}</string>
    <string name="distance">Distance: {dist}Mm</string>
    <string name="speed">Speed: {speed} Mm/h</string>
    <string name="max_dist">Max Distance: {dist}Mm</string>
    <string name="hour_unit">Hour = h or Hrs</string>
    <string name="distance_unit">Mega Miles = Mm</string>
    <string name="submit">Submit</string>
    <string name="vehicle_count_count">Vehicle count: {count}</string>
    <string name="vehicle_name">Vehicle: {vehicle}</string>
    <string name="find_falcon">Find Falcon</string>
</resources>