<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rocket_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:background="@drawable/item_selector"
    android:padding="@dimen/dimen_4dp"
    android:focusable="false">

    <ImageView
        android:id="@+id/rocket_iv"
        android:layout_width="@dimen/vehicle"
        android:layout_height="@dimen/vehicle"
        android:layout_margin="@dimen/dimen_4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spacerocket_65bc3c0c" />

    <TextView
        android:id="@+id/rocket_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:text="@string/vehicle_name"
        app:layout_constraintEnd_toStartOf="@id/rocket_speed_tv"
        app:layout_constraintStart_toEndOf="@+id/rocket_iv"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/rocket_speed_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rocket_name_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/max_dist_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_5dp"
        android:text="@string/max_dist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/count_tv"
        app:layout_constraintStart_toEndOf="@+id/rocket_iv"
        app:layout_constraintTop_toBottomOf="@id/rocket_name_tv" />

    <TextView
        android:id="@+id/count_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_count_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/max_dist_tv"
        app:layout_constraintTop_toBottomOf="@id/rocket_speed_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>