<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/planet_cl"
    android:background="@drawable/item_selector"
    android:clickable="true"
    android:padding="@dimen/dimen_4dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/planet_iv"
            android:layout_width="@dimen/planet_width"
            android:layout_height="@dimen/planet_width"
            android:scaleType="fitXY"
            android:contentDescription="@string/planet_image"
            app:srcCompat="@drawable/jebing_d45dffae" />

        <TextView
            android:id="@+id/planet_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/planet_name" />

        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/distance" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>